2001-06-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/malloc.h: Fix non-ANSI comment after #endif.

2001-06-11  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>

	* profile/configure.in: Make msvcrt.dll version default.
	* profile/makefile.in: Build both gcrt1.o and gcrt2.o.	
	* provile/configure: Regenerate.

2001-06-11  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/stdio.h (swscanf): Make first arugument const. 
	* include/wchar.h (swscanf): Ditto. 
	* include/tchar.h (_tfopen): New _UNICODE define.
	(_tgetenv): Ditto.
	(_tsetlocale): Ditto.

2001-06-04  Earnie Boyd  <earnie@users.sourceforge.net>

	* profile/Makefile.in (mkinstalldirs): Correct relative path.

2001-06-04  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/_mingw.h: Change version to 1.0.
	Makefile.in: Ditto.

2000-02-21  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/tchar.h: (__TEXT): Remove undef.
	(_TEXT): Ditto.
	(_T): Ditto.

Fri Feb  2 10:34:07  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/tchar.h: (__TEXT): Add private macro.
	(_TEXT): Modify definition to use __TEXT.
	(_T): Ditto.
	This change allows the passing of a MACRO as an argument and have that
	MACRO resolved first.
	Thanks to: Eric PAIRE <eric.paire@ri.silicomp.com>

Wed Jan 31 17:12:51  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in: Increment version to 0.5
	* include/_mingw.h: Increment minor version

Tue Jan 30 13:01:01  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/assert.h: (assert): Remove ; from end of definition
	Thanks to: AJ Reins <tbisp@qwest.net>

Tue Jan 30 07:31:22  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/time.h: (CLOCKS_PER_SEC): Type cast the constant.
	Thanks to: Cosmin Truta  <cosmin@cs.toronto.edu>

Mon Jan 29 14:03:07  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* time.h: (CLOCKS_PER_SEC) Change from FP to  integer constant.

Sun Jan 28 13:01:08  2001  Earnie Boyd  <earnie@users.sourceforge.net>